k8s/deployment-insecure.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-vuln-app
  labels:
    app: python-vuln-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-vuln-app
  template:
    metadata:
      labels:
        app: python-vuln-app
    spec:
      # RESEARCH: privileged / root storylines
      hostNetwork: true
      containers:
        - name: app
          image: python:3.10.14-slim
          imagePullPolicy: IfNotPresent
          command: ["sleep", "3600"]
          securityContext:
            privileged: true
            runAsUser: 0
            allowPrivilegeEscalation: true
