k8s/research-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: vulnerable-bookstore-research
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
    - name: pg
      port: 5432
      targetPort: 5432
  type: ClusterIP
